订阅：优化定制黑名单方式